# rsscord

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  config.docker.example.yaml  config.example.yaml  pyproject.toml  requirements.txt  rsscord.py
docs/: config.md  docker.md  operations.md  roadmap.md  troubleshooting.md
migrations/: 20260512_add_message_template_and_favicon.sql
skills/cli-anything-rsscord/: SKILL.md
src/commands/: set_template.py
src/lib/: favicons.py  template_renderer.py
src/services/: feed_processor.py
tests/: test_config_cli.py
