[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rsscord"
version = "0.1.0"
description = "Config-driven RSS-to-Discord notifications"
requires-python = ">=3.10"
dependencies = [
  "feedparser>=6.0.11",
  "httpx>=0.27.0",
  "PyYAML>=6.0.1",
]

[project.scripts]
rsscord = "rsscord:main"

[tool.setuptools]
py-modules = ["rsscord"]
